# cycling-manager

./: .gitignore  README.md  config.py  main.py  pyproject.toml  temp_startlist.html  test.py  verify_startlist.py
data/: cyclists.json  points.json  races.json
db/: database.py  loader.py
db/migrations/: m_20260212_01_pbZhV.sql  m_20260213_01_M4Xx4.sql  m_20260213_02_7Z37w.sql  m_20260213_03_3houI.sql  m_20260215_01_utoFk.sql  m_20260215_02_IWIrH.sql
db/queries/: base.sql  competitions.sql  results.sql  selections.sql  squads.sql  users.sql
models/: competition.py  cyclist.py  race.py  result.py  selection.py  squad.py  team.py  user.py
repositories/: base_repository.py  competition_repository.py  result_repository.py  selection_repository.py  squad_repository.py  user_repository.py
routers/: auth_router.py  base_router.py  competition_router.py  selection_router.py  squad_router.py  sync_router.py
services/: auth_service.py  pcs_service.py  sync_service.py
