[project]
name = "cycling-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosql>=15.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.129.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "yoyo-migrations>=9.0.0",
]
